- Added support to automatically clear caches for view-entity based in
  updates to member-entity records, as long as all member-entity PK fields
  are directly or indirectly aliased on the view-entity
- Improved entity-auto service error handling
- Changed login screen to render in the same request instead of a redirect
  and to return a status code of 401 (related to bug #3442045)

Bug Fixes:

- Fixed issue with entities in different packages that have the same name
- Instead of submit buttons always having name=submit, they now use the
  name of the XML Form field; to see if one button or another was pressed
  just check to see if the parameter was passed; also changed all submit
  field names to submitButton to avoid conflict with standard DOM function
  "submit" for form elements (thanks to Vasanth for reporting this)
- Fixed bad reference to ComparisonOperator in DateCondition class
- Fixed issue with settings nulls in an entity-auto update service or
  anywhere the dbValueMap is not populated from the database
- Fixed bug (#3442014) with funny FTL eval of label.@encode attribute


===========================================================================
Release 1.0.0 - 21 November 2011
===========================================================================

Here it is, the initial production release of the 1.0 series. This release
includes various fixes and new features to facilitate easy use based on
more extensive testing and real-world development using the framework.

More examples of different patterns exist in Moqui Framework itself, as
well as in add-on projects including Mantle, POP Commerce, and so on.

This release includes:

- All the great features of the preview, beta and rc1 releases
- For field name pattern consistency changed GeoAssoc.geoIdTo to toGeoId,
  StatusValidChange.statusIdTo to toStatusId, and UomConversion.uomIdTo to
  toUomId
- Added support to skip stats tracking based on a conditional expression