@@ -306,7 +306,12 @@ This Work includes contributions authored by David E. Jones, not as a
             order-by option in the header.
         </xs:documentation></xs:annotation>
         <xs:complexType>
-            <xs:sequence><xs:element ref="SubFields" minOccurs="0"/></xs:sequence>
+            <xs:sequence>
+                <xs:choice>
+                    <xs:element minOccurs="0" ref="SubFields"/>
+                    <xs:element minOccurs="0" ref="AllWidgets"/>
+                </xs:choice>
+            </xs:sequence>
             <xs:attribute name="title" type="xs:string">
                 <xs:annotation><xs:documentation>The name of this field that will be shown to the user; can use the ${}
                     and map.key (dot) syntax to insert values from the context.</xs:documentation></xs:annotation>
@@ -320,7 +325,10 @@ This Work includes contributions authored by David E. Jones, not as a
     <xs:element name="conditional-field">
         <xs:complexType>
             <xs:sequence>
-                <xs:element minOccurs="0" ref="SubFields"/>
+                <xs:choice>
+                    <xs:element minOccurs="0" ref="SubFields"/>
+                    <xs:element minOccurs="0" ref="AllWidgets"/>
+                </xs:choice>
                 <xs:element minOccurs="0" maxOccurs="unbounded" ref="StandaloneFields"/>
             </xs:sequence>
             <xs:attribute name="condition" type="xs:string" use="required">
@@ -332,7 +340,10 @@ This Work includes contributions authored by David E. Jones, not as a
     <xs:element name="default-field">
         <xs:complexType>
             <xs:sequence>
-                <xs:element minOccurs="0" ref="SubFields"/>
+                <xs:choice>
+                    <xs:element minOccurs="0" ref="SubFields"/>
+                    <xs:element minOccurs="0" ref="AllWidgets"/>
+                </xs:choice>
                 <xs:element minOccurs="0" maxOccurs="unbounded" ref="StandaloneFields"/>
             </xs:sequence>
             <xs:attributeGroup ref="attlist.conditional-field"/>
